[gd_scene load_steps=35 format=3 uid="uid://ctestpark001"]

[ext_resource type="Script" path="res://scripts/test/test_park.gd" id="1_park"]
[ext_resource type="Script" path="res://scripts/systems/moving_platform.gd" id="2_moving"]
[ext_resource type="Script" path="res://scripts/systems/swinging_obstacle.gd" id="3_swing"]
[ext_resource type="Script" path="res://scripts/systems/rotating_barrier.gd" id="4_rotate"]

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(200, 0.5, 200)

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(200, 0.5, 200)

[sub_resource type="StandardMaterial3D" id="Mat_grass"]
albedo_color = Color(0.2, 0.35, 0.15, 1)
roughness = 0.95

[sub_resource type="StandardMaterial3D" id="Mat_concrete"]
albedo_color = Color(0.4, 0.4, 0.42, 1)
roughness = 0.85

[sub_resource type="StandardMaterial3D" id="Mat_ramp"]
albedo_color = Color(0.5, 0.35, 0.25, 1)
roughness = 0.7

[sub_resource type="StandardMaterial3D" id="Mat_rail"]
albedo_color = Color(0.7, 0.7, 0.75, 1)
metallic = 0.9
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="Mat_halfpipe"]
albedo_color = Color(0.3, 0.5, 0.6, 1)
roughness = 0.6

[sub_resource type="StandardMaterial3D" id="Mat_obstacle"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.5, 0.1, 0.1, 1)
emission_energy_multiplier = 0.5
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="Mat_platform"]
albedo_color = Color(0.3, 0.6, 0.3, 1)
roughness = 0.6

[sub_resource type="StandardMaterial3D" id="Mat_yellow"]
albedo_color = Color(0.9, 0.8, 0.1, 1)
emission_enabled = true
emission = Color(0.4, 0.35, 0.05, 1)
roughness = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_ramp_small"]
size = Vector3(6, 0.3, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_ramp_small"]
size = Vector3(6, 0.3, 8)

[sub_resource type="BoxMesh" id="BoxMesh_ramp_med"]
size = Vector3(8, 0.3, 12)

[sub_resource type="BoxShape3D" id="BoxShape3D_ramp_med"]
size = Vector3(8, 0.3, 12)

[sub_resource type="BoxMesh" id="BoxMesh_rail"]
size = Vector3(0.4, 0.2, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_rail"]
size = Vector3(0.4, 0.2, 15)

[sub_resource type="BoxMesh" id="BoxMesh_halfpipe"]
size = Vector3(5, 0.3, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_halfpipe"]
size = Vector3(5, 0.3, 30)

[sub_resource type="BoxMesh" id="BoxMesh_halfpipe_floor"]
size = Vector3(20, 0.3, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_halfpipe_floor"]
size = Vector3(20, 0.3, 30)

[sub_resource type="BoxMesh" id="BoxMesh_platform"]
size = Vector3(8, 0.5, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_platform"]
size = Vector3(8, 0.5, 8)

[sub_resource type="CylinderMesh" id="CylinderMesh_swing"]
top_radius = 0.3
bottom_radius = 0.3
height = 6.0

[sub_resource type="BoxShape3D" id="BoxShape3D_hitbox"]
size = Vector3(0.8, 6, 0.8)

[sub_resource type="BoxMesh" id="BoxMesh_barrier_arm"]
size = Vector3(8, 0.6, 0.6)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_barrier"]
height = 0.8
radius = 5.0

[sub_resource type="BoxMesh" id="BoxMesh_pillar"]
size = Vector3(1.5, 2, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_pillar"]
size = Vector3(1.5, 2, 1.5)

[node name="TestPark" type="Node3D"]
script = ExtResource("1_park")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 30, 0)
light_energy = 1.3
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ground")
surface_material_override/0 = SubResource("Mat_grass")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ground")

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="RampArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 20)

[node name="AreaSpawn" type="Marker3D" parent="RampArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -10)

[node name="SmallRamp1" type="StaticBody3D" parent="RampArea"]
transform = Transform3D(1, 0, 0, 0, 0.966, 0.259, 0, -0.259, 0.966, 0, 0.5, 0)

[node name="Mesh" type="MeshInstance3D" parent="RampArea/SmallRamp1"]
mesh = SubResource("BoxMesh_ramp_small")
surface_material_override/0 = SubResource("Mat_ramp")

[node name="Collision" type="CollisionShape3D" parent="RampArea/SmallRamp1"]
shape = SubResource("BoxShape3D_ramp_small")

[node name="SmallRamp2" type="StaticBody3D" parent="RampArea"]
transform = Transform3D(1, 0, 0, 0, 0.966, -0.259, 0, 0.259, 0.966, 0, 0.5, 16)

[node name="Mesh" type="MeshInstance3D" parent="RampArea/SmallRamp2"]
mesh = SubResource("BoxMesh_ramp_small")
surface_material_override/0 = SubResource("Mat_ramp")

[node name="Collision" type="CollisionShape3D" parent="RampArea/SmallRamp2"]
shape = SubResource("BoxShape3D_ramp_small")

[node name="MediumRamp1" type="StaticBody3D" parent="RampArea"]
transform = Transform3D(1, 0, 0, 0, 0.94, 0.342, 0, -0.342, 0.94, 12, 0.8, 0)

[node name="Mesh" type="MeshInstance3D" parent="RampArea/MediumRamp1"]
mesh = SubResource("BoxMesh_ramp_med")
surface_material_override/0 = SubResource("Mat_ramp")

[node name="Collision" type="CollisionShape3D" parent="RampArea/MediumRamp1"]
shape = SubResource("BoxShape3D_ramp_med")

[node name="SteepRamp" type="StaticBody3D" parent="RampArea"]
transform = Transform3D(1, 0, 0, 0, 0.866, 0.5, 0, -0.5, 0.866, -10, 1.2, 8)

[node name="Mesh" type="MeshInstance3D" parent="RampArea/SteepRamp"]
mesh = SubResource("BoxMesh_ramp_med")
surface_material_override/0 = SubResource("Mat_ramp")

[node name="Collision" type="CollisionShape3D" parent="RampArea/SteepRamp"]
shape = SubResource("BoxShape3D_ramp_med")

[node name="JumpRamp" type="StaticBody3D" parent="RampArea"]
transform = Transform3D(1, 0, 0, 0, 0.819, 0.574, 0, -0.574, 0.819, 0, 1.5, 30)

[node name="Mesh" type="MeshInstance3D" parent="RampArea/JumpRamp"]
mesh = SubResource("BoxMesh_ramp_small")
surface_material_override/0 = SubResource("Mat_yellow")

[node name="Collision" type="CollisionShape3D" parent="RampArea/JumpRamp"]
shape = SubResource("BoxShape3D_ramp_small")

[node name="RailArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 20)

[node name="AreaSpawn" type="Marker3D" parent="RailArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -10)

[node name="LowRail" type="StaticBody3D" parent="RailArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Mesh" type="MeshInstance3D" parent="RailArea/LowRail"]
mesh = SubResource("BoxMesh_rail")
surface_material_override/0 = SubResource("Mat_rail")

[node name="Collision" type="CollisionShape3D" parent="RailArea/LowRail"]
shape = SubResource("BoxShape3D_rail")

[node name="MedRail" type="StaticBody3D" parent="RailArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1.0, 10)

[node name="Mesh" type="MeshInstance3D" parent="RailArea/MedRail"]
mesh = SubResource("BoxMesh_rail")
surface_material_override/0 = SubResource("Mat_rail")

[node name="Collision" type="CollisionShape3D" parent="RailArea/MedRail"]
shape = SubResource("BoxShape3D_rail")

[node name="HighRail" type="StaticBody3D" parent="RailArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1.5, 20)

[node name="Mesh" type="MeshInstance3D" parent="RailArea/HighRail"]
mesh = SubResource("BoxMesh_rail")
surface_material_override/0 = SubResource("Mat_rail")

[node name="Collision" type="CollisionShape3D" parent="RailArea/HighRail"]
shape = SubResource("BoxShape3D_rail")

[node name="DiagonalRail" type="StaticBody3D" parent="RailArea"]
transform = Transform3D(0.707, 0, 0.707, 0, 1, 0, -0.707, 0, 0.707, 0, 0.8, 30)

[node name="Mesh" type="MeshInstance3D" parent="RailArea/DiagonalRail"]
mesh = SubResource("BoxMesh_rail")
surface_material_override/0 = SubResource("Mat_rail")

[node name="Collision" type="CollisionShape3D" parent="RailArea/DiagonalRail"]
shape = SubResource("BoxShape3D_rail")

[node name="CurvedRailStart" type="StaticBody3D" parent="RailArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0.6, 0)

[node name="Mesh" type="MeshInstance3D" parent="RailArea/CurvedRailStart"]
mesh = SubResource("BoxMesh_rail")
surface_material_override/0 = SubResource("Mat_rail")

[node name="Collision" type="CollisionShape3D" parent="RailArea/CurvedRailStart"]
shape = SubResource("BoxShape3D_rail")

[node name="CurvedRailMid" type="StaticBody3D" parent="RailArea"]
transform = Transform3D(0.866, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866, -18, 0.6, 10)

[node name="Mesh" type="MeshInstance3D" parent="RailArea/CurvedRailMid"]
mesh = SubResource("BoxMesh_rail")
surface_material_override/0 = SubResource("Mat_rail")

[node name="Collision" type="CollisionShape3D" parent="RailArea/CurvedRailMid"]
shape = SubResource("BoxShape3D_rail")

[node name="CurvedRailEnd" type="StaticBody3D" parent="RailArea"]
transform = Transform3D(0.707, 0, 0.707, 0, 1, 0, -0.707, 0, 0.707, -22, 0.6, 20)

[node name="Mesh" type="MeshInstance3D" parent="RailArea/CurvedRailEnd"]
mesh = SubResource("BoxMesh_rail")
surface_material_override/0 = SubResource("Mat_rail")

[node name="Collision" type="CollisionShape3D" parent="RailArea/CurvedRailEnd"]
shape = SubResource("BoxShape3D_rail")

[node name="RailRampUp" type="StaticBody3D" parent="RailArea"]
transform = Transform3D(1, 0, 0, 0, 0.985, 0.174, 0, -0.174, 0.985, 15, 0.3, 5)

[node name="Mesh" type="MeshInstance3D" parent="RailArea/RailRampUp"]
mesh = SubResource("BoxMesh_rail")
surface_material_override/0 = SubResource("Mat_ramp")

[node name="Collision" type="CollisionShape3D" parent="RailArea/RailRampUp"]
shape = SubResource("BoxShape3D_rail")

[node name="HalfPipeArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -40)

[node name="AreaSpawn" type="Marker3D" parent="HalfPipeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="HalfPipeLeft1" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(1, 0, 0, 0, 0.866, 0.5, 0, -0.5, 0.866, -12, 0.3, 0)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/HalfPipeLeft1"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/HalfPipeLeft1"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="HalfPipeLeft2" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(1, 0, 0, 0, 0.707, 0.707, 0, -0.707, 0.707, -15, 1.5, 0)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/HalfPipeLeft2"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/HalfPipeLeft2"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="HalfPipeLeft3" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, -17, 3.5, 0)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/HalfPipeLeft3"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/HalfPipeLeft3"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="HalfPipeRight1" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(1, 0, 0, 0, 0.866, -0.5, 0, 0.5, 0.866, 12, 0.3, 0)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/HalfPipeRight1"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/HalfPipeRight1"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="HalfPipeRight2" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(1, 0, 0, 0, 0.707, -0.707, 0, 0.707, 0.707, 15, 1.5, 0)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/HalfPipeRight2"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/HalfPipeRight2"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="HalfPipeRight3" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(1, 0, 0, 0, 0.5, -0.866, 0, 0.866, 0.5, 17, 3.5, 0)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/HalfPipeRight3"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/HalfPipeRight3"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="HalfPipeFloor" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/HalfPipeFloor"]
mesh = SubResource("BoxMesh_halfpipe_floor")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/HalfPipeFloor"]
shape = SubResource("BoxShape3D_halfpipe_floor")

[node name="QuarterPipe1" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(0, 0, 1, 0.866, 0.5, 0, -0.5, 0.866, 0, 0, 0.3, -20)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/QuarterPipe1"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/QuarterPipe1"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="QuarterPipe2" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(0, 0, 1, 0.707, 0.707, 0, -0.707, 0.707, 0, 0, 1.5, -23)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/QuarterPipe2"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/QuarterPipe2"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="QuarterPipe3" type="StaticBody3D" parent="HalfPipeArea"]
transform = Transform3D(0, 0, 1, 0.5, 0.866, 0, -0.866, 0.5, 0, 0, 3.5, -25)

[node name="Mesh" type="MeshInstance3D" parent="HalfPipeArea/QuarterPipe3"]
mesh = SubResource("BoxMesh_halfpipe")
surface_material_override/0 = SubResource("Mat_halfpipe")

[node name="Collision" type="CollisionShape3D" parent="HalfPipeArea/QuarterPipe3"]
shape = SubResource("BoxShape3D_halfpipe")

[node name="ObstacleArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, -40)

[node name="AreaSpawn" type="Marker3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -15)

[node name="MovingPlatform1" type="AnimatableBody3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("2_moving")
move_distance = Vector3(15, 0, 0)
move_duration = 3.0

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/MovingPlatform1"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("Mat_platform")

[node name="Collision" type="CollisionShape3D" parent="ObstacleArea/MovingPlatform1"]
shape = SubResource("BoxShape3D_platform")

[node name="MovingPlatform2" type="AnimatableBody3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.5, 15)
script = ExtResource("2_moving")
move_distance = Vector3(0, 0, 12)
move_duration = 2.5

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/MovingPlatform2"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("Mat_platform")

[node name="Collision" type="CollisionShape3D" parent="ObstacleArea/MovingPlatform2"]
shape = SubResource("BoxShape3D_platform")

[node name="MovingPlatformVert" type="AnimatableBody3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.5, 15)
script = ExtResource("2_moving")
move_distance = Vector3(0, 3, 0)
move_duration = 2.0

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/MovingPlatformVert"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("Mat_platform")

[node name="Collision" type="CollisionShape3D" parent="ObstacleArea/MovingPlatformVert"]
shape = SubResource("BoxShape3D_platform")

[node name="SwingingObstacle1" type="Node3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 25)
script = ExtResource("3_swing")
swing_angle = 45.0
swing_speed = 1.5

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/SwingingObstacle1"]
mesh = SubResource("CylinderMesh_swing")
surface_material_override/0 = SubResource("Mat_obstacle")

[node name="Hitbox" type="Area3D" parent="ObstacleArea/SwingingObstacle1"]

[node name="HitboxCollision" type="CollisionShape3D" parent="ObstacleArea/SwingingObstacle1/Hitbox"]
shape = SubResource("BoxShape3D_hitbox")

[node name="SwingingObstacle2" type="Node3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 5, 25)
script = ExtResource("3_swing")
swing_angle = 60.0
swing_speed = 2.0

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/SwingingObstacle2"]
mesh = SubResource("CylinderMesh_swing")
surface_material_override/0 = SubResource("Mat_obstacle")

[node name="Hitbox" type="Area3D" parent="ObstacleArea/SwingingObstacle2"]

[node name="HitboxCollision" type="CollisionShape3D" parent="ObstacleArea/SwingingObstacle2/Hitbox"]
shape = SubResource("BoxShape3D_hitbox")

[node name="RotatingBarrier1" type="Node3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 40)
script = ExtResource("4_rotate")
rotation_speed = 1.5

[node name="Arm1" type="MeshInstance3D" parent="ObstacleArea/RotatingBarrier1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_barrier_arm")
surface_material_override/0 = SubResource("Mat_obstacle")

[node name="Arm2" type="MeshInstance3D" parent="ObstacleArea/RotatingBarrier1"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0, 0)
mesh = SubResource("BoxMesh_barrier_arm")
surface_material_override/0 = SubResource("Mat_obstacle")

[node name="Hitbox" type="Area3D" parent="ObstacleArea/RotatingBarrier1"]

[node name="HitboxCollision" type="CollisionShape3D" parent="ObstacleArea/RotatingBarrier1/Hitbox"]
shape = SubResource("CylinderShape3D_barrier")

[node name="RotatingBarrier2" type="Node3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 1, 35)
script = ExtResource("4_rotate")
rotation_speed = -2.0

[node name="Arm1" type="MeshInstance3D" parent="ObstacleArea/RotatingBarrier2"]
mesh = SubResource("BoxMesh_barrier_arm")
surface_material_override/0 = SubResource("Mat_obstacle")

[node name="Arm2" type="MeshInstance3D" parent="ObstacleArea/RotatingBarrier2"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0, 0)
mesh = SubResource("BoxMesh_barrier_arm")
surface_material_override/0 = SubResource("Mat_obstacle")

[node name="Hitbox" type="Area3D" parent="ObstacleArea/RotatingBarrier2"]

[node name="HitboxCollision" type="CollisionShape3D" parent="ObstacleArea/RotatingBarrier2/Hitbox"]
shape = SubResource("CylinderShape3D_barrier")

[node name="ObstacleCourse" type="Node3D" parent="ObstacleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 30)

[node name="Pillar1" type="StaticBody3D" parent="ObstacleArea/ObstacleCourse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 0)

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/ObstacleCourse/Pillar1"]
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("Mat_concrete")

[node name="Collision" type="CollisionShape3D" parent="ObstacleArea/ObstacleCourse/Pillar1"]
shape = SubResource("BoxShape3D_pillar")

[node name="Pillar2" type="StaticBody3D" parent="ObstacleArea/ObstacleCourse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 0)

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/ObstacleCourse/Pillar2"]
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("Mat_concrete")

[node name="Collision" type="CollisionShape3D" parent="ObstacleArea/ObstacleCourse/Pillar2"]
shape = SubResource("BoxShape3D_pillar")

[node name="Pillar3" type="StaticBody3D" parent="ObstacleArea/ObstacleCourse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 6)

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/ObstacleCourse/Pillar3"]
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("Mat_concrete")

[node name="Collision" type="CollisionShape3D" parent="ObstacleArea/ObstacleCourse/Pillar3"]
shape = SubResource("BoxShape3D_pillar")

[node name="Pillar4" type="StaticBody3D" parent="ObstacleArea/ObstacleCourse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 12)

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/ObstacleCourse/Pillar4"]
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("Mat_concrete")

[node name="Collision" type="CollisionShape3D" parent="ObstacleArea/ObstacleCourse/Pillar4"]
shape = SubResource("BoxShape3D_pillar")

[node name="Pillar5" type="StaticBody3D" parent="ObstacleArea/ObstacleCourse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 12)

[node name="Mesh" type="MeshInstance3D" parent="ObstacleArea/ObstacleCourse/Pillar5"]
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("Mat_concrete")

[node name="Collision" type="CollisionShape3D" parent="ObstacleArea/ObstacleCourse/Pillar5"]
shape = SubResource("BoxShape3D_pillar")
